commit removal of overflow-x since it stops the single scroll. Also added prefers-reduced-motion for accessibility

--- a/public/index.css
+++ b/public/index.css
@@ -3,9 +3,3 @@ body, html {
   width: auto;
   background-color: #f7f7f7;
 }
-
-@media screen and (max-width: 1024px){
-  body,html {
-    overflow-x: hidden;
-  }
-}
