--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -242,3 +242,10 @@
   }
 }
 
+@media screen and (prefers-reduced-motion: reduce) {  
+  * {
+    animation-duration: 0.001ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.001ms !important;
+  }
+}
